--- a/brooklyn-cloudfoundry/src/test/resources/blueprints/spring-music-at-pcf-dev-location.yml
+++ b/brooklyn-cloudfoundry/src/test/resources/blueprints/spring-music-at-pcf-dev-location.yml
@@ -19,7 +19,6 @@
 name: PCF Dev Location example
 location:
   cloudfoundry:
-    provider: provider
     identity: admin
     credential: admin
     org: pcfdev-org
@@ -27,9 +26,12 @@ location:
     space: pcfdev-space
 services:
 - type: org.apache.brooklyn.cloudfoundry.entity.VanillaCloudFoundryApplication
-  id: vanilla-app
   brooklyn.config:
-    nameApp: test
-    path: file:/Users/andrea/git/andreaturli/brooklyn-cloudfoundry/brooklyn-cloudfoundry/src/test/resources/brooklyn-example-hello-world-sql-webapp-in-paas.war
+    nameApp: spring-music
+    path: file:/Users/andrea/projects/cf/spring-music/build/libs/spring-music.jar
     buildpack: https://github.com/cloudfoundry/java-buildpack.git
+    services:
+    - p-mysql:
+        plan: 512mb
+        instanceName: myMysql
       
